@@ -2,10 +2,7 @@ package gov.uk.courtdata.integration.dces;
 
 import static gov.uk.courtdata.enums.ConcorContributionStatus.ACTIVE;
 import static gov.uk.courtdata.enums.ConcorContributionStatus.SENT;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -19,9 +16,11 @@ import gov.uk.courtdata.entity.ContributionFileErrorsEntity;
 import gov.uk.courtdata.entity.ContributionFilesEntity;
 import gov.uk.courtdata.enums.ConcorContributionStatus;
 import gov.uk.courtdata.integration.util.MockMvcIntegrationTest;
+
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+
 import org.assertj.core.api.junit.jupiter.SoftAssertionsExtension;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.MethodOrderer;
@@ -39,10 +38,13 @@ import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 class ConcorContributionsRestControllerIntegrationTest extends MockMvcIntegrationTest {
 
-    private static final String ATOMIC_UPDATE_ENDPOINT_URL = "/api/internal/v1/debt-collection-enforcement/create-contribution-file";
+    private static final String ATOMIC_UPDATE_ENDPOINT_URL =
+            "/api/internal/v1/debt-collection-enforcement/create-contribution-file";
 
-    private static final String ENDPOINT_URL = "/api/internal/v1/debt-collection-enforcement/concor-contribution-files?status=";
-    private static final String DRC_UPDATE_URL = "/api/internal/v1/debt-collection-enforcement/log-contribution-response";
+    private static final String ENDPOINT_URL =
+            "/api/internal/v1/debt-collection-enforcement/concor-contribution-files?status=";
+    private static final String DRC_UPDATE_URL =
+            "/api/internal/v1/debt-collection-enforcement/log-contribution-response";
 
     @MockitoSpyBean
     DebtCollectionRepository debtCollectionRepositorySpy;
@@ -56,12 +58,12 @@ class ConcorContributionsRestControllerIntegrationTest extends MockMvcIntegratio
     private static int file2Id;
 
     @BeforeEach
-    public void setUp() {
-        file1Id = repos.contributionFiles.save(
-                        TestEntityDataBuilder.getContributionFilesEntity(FILE_ONE_NAME, 10, 0, false))
+    void setUp() {
+        file1Id = repos.contributionFiles
+                .save(TestEntityDataBuilder.getContributionFilesEntity(FILE_ONE_NAME, 10, 0, false))
                 .getFileId();
-        file2Id = repos.contributionFiles.save(
-                        TestEntityDataBuilder.getContributionFilesEntity(FILE_TWO_NAME, 10, 0, true))
+        file2Id = repos.contributionFiles
+                .save(TestEntityDataBuilder.getContributionFilesEntity(FILE_TWO_NAME, 10, 0, true))
                 .getFileId();
 
         saveConcorEntity(null, ACTIVE, file1Id, "<xml>1 content dummy</xml>");
@@ -70,10 +72,9 @@ class ConcorContributionsRestControllerIntegrationTest extends MockMvcIntegratio
         savedEntityId4 = saveConcorEntity(null, SENT, file2Id, "<xml>4 content dummy</xml>");
     }
 
-    private int saveConcorEntity(Integer repId, ConcorContributionStatus status, Integer fileId,
-            String currentXml) {
-        ConcorContributionsEntity concorEntity = TestEntityDataBuilder.getConcorContributionsEntity(
-                repId, status, fileId, currentXml);
+    private int saveConcorEntity(Integer repId, ConcorContributionStatus status, Integer fileId, String currentXml) {
+        ConcorContributionsEntity concorEntity =
+                TestEntityDataBuilder.getConcorContributionsEntity(repId, status, fileId, currentXml);
         return repos.concorContributions.save(concorEntity).getId();
     }
 
@@ -107,8 +108,8 @@ class ConcorContributionsRestControllerIntegrationTest extends MockMvcIntegratio
                 .andExpect(status().is4xxClientError())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("code").value("BAD_REQUEST"))
-                .andExpect(jsonPath("message").value(
-                        "The provided value 'XXX' is the incorrect type for the 'status' parameter."));
+                .andExpect(jsonPath("message")
+                        .value("The provided value 'XXX' is the incorrect type for the 'status' parameter."));
     }
 
     @Test
@@ -124,16 +125,18 @@ class ConcorContributionsRestControllerIntegrationTest extends MockMvcIntegratio
 
     @Test
     void givenAListOfIds_whenAtomicUpdate_theStatusIsUpdated() throws Exception {
-        // removed the xml values as it cannot be tested due to xmlType. The double refuses to handle XMLTYPE(?) as that is oracle specific.
+        // removed the xml values as it cannot be tested due to xmlType. The double refuses to handle XMLTYPE(?) as that
+        // is oracle specific.
         int expectedFileListSize = repos.contributionFiles.findAll().size() + 1;
         String expectedFilename = "TestFilename.xml";
         int expectedRecordsSent = 2;
-        String s = """
-                {
-                    "recordsSent": %s,
-                    "concorContributionIds": [%s],
-                    "xmlFileName" : "%s"
-                }""";
+        String s =
+                """
+                        {
+                            "recordsSent": %s,
+                            "concorContributionIds": [%s],
+                            "xmlFileName" : "%s"
+                        }""";
         s = s.formatted(expectedRecordsSent, savedEntityId3, expectedFilename);
         mockMvc.perform(MockMvcRequestBuilders.post(ATOMIC_UPDATE_ENDPOINT_URL)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -142,22 +145,20 @@ class ConcorContributionsRestControllerIntegrationTest extends MockMvcIntegratio
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON));
         // verify the content of the saved entity.
         List<ContributionFilesEntity> savedFileEntities = repos.contributionFiles.findAll();
-        assertEquals(expectedFileListSize, savedFileEntities.size());
-        ContributionFilesEntity savedFileEntity = savedFileEntities.get(
-                expectedFileListSize - 1); // get last element
-        assertNotNull(savedFileEntity);
-        assertNotNull(savedFileEntity.getFileId());
-        assertEquals(expectedRecordsSent, savedFileEntity.getRecordsSent());
-        assertNull(savedFileEntity.getXmlContent());
-        assertNull(savedFileEntity.getAckXmlContent());
-        assertEquals(expectedFilename, savedFileEntity.getFileName());
+        assertThat(savedFileEntities).hasSize(expectedFileListSize);
+        ContributionFilesEntity savedFileEntity = savedFileEntities.get(expectedFileListSize - 1); // get last element
+        assertThat(savedFileEntity).isNotNull();
+        assertThat(savedFileEntity.getFileId()).isNotNull();
+        assertThat(savedFileEntity.getRecordsSent()).isEqualTo(expectedRecordsSent);
+        assertThat(savedFileEntity.getXmlContent()).isNull();
+        assertThat(savedFileEntity.getAckXmlContent()).isNull();
+        assertThat(savedFileEntity.getFileName()).isEqualTo(expectedFilename);
         // assert the file id has been set on the contribution
-        Optional<ConcorContributionsEntity> updatedConcor = repos.concorContributions.findById(
-                savedEntityId3);
-        assertTrue(updatedConcor.isPresent());
+        Optional<ConcorContributionsEntity> updatedConcor = repos.concorContributions.findById(savedEntityId3);
+        assertThat(updatedConcor).isPresent();
         ConcorContributionsEntity fdcContributionsEntity = updatedConcor.get();
-        assertEquals(savedFileEntity.getFileId(), fdcContributionsEntity.getContribFileId());
-        assertEquals(ConcorContributionStatus.SENT, fdcContributionsEntity.getStatus());
+        assertThat(fdcContributionsEntity.getContribFileId()).isEqualTo(savedFileEntity.getFileId());
+        assertThat(fdcContributionsEntity.getStatus()).isEqualTo(ConcorContributionStatus.SENT);
     }
 
     @Test
@@ -171,11 +172,11 @@ class ConcorContributionsRestControllerIntegrationTest extends MockMvcIntegratio
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON));
         // check we've updated the received count.
         Optional<ContributionFilesEntity> fileEntity = repos.contributionFiles.findById(file2Id);
-        assertTrue(fileEntity.isPresent());
-        assertEquals(1, fileEntity.get().getRecordsReceived());
+        assertThat(fileEntity).isPresent();
+        assertThat(fileEntity.get().getRecordsReceived()).isOne();
 
         // check no values in errors
-        assertEquals(0, repos.contributionFileErrors.count());
+        assertThat(repos.contributionFileErrors.count()).isZero();
     }
 
     @Test
@@ -191,20 +192,21 @@ class ConcorContributionsRestControllerIntegrationTest extends MockMvcIntegratio
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON));
         // check we've updated the received count.
         Optional<ContributionFilesEntity> fileEntity = repos.contributionFiles.findById(file2Id);
-        assertTrue(fileEntity.isPresent());
-        assertEquals(0, fileEntity.get().getRecordsReceived());
+        assertThat(fileEntity).isPresent();
+        assertThat(fileEntity.get().getRecordsReceived()).isZero();
 
         // check no values in errors
-        assertEquals(1, repos.contributionFileErrors.count());
-        ContributionFileErrorsEntity errorEntity = repos.contributionFileErrors.findAll().get(0);
-        assertEquals(savedEntityId4, errorEntity.getConcorContributionId());
-        assertEquals(savedEntityId4, errorEntity.getContributionId());
-        assertEquals(errorText, errorEntity.getErrorText());
-        assertEquals(file2Id, errorEntity.getContributionFileId());
+        assertThat(repos.contributionFileErrors.count()).isOne();
+        ContributionFileErrorsEntity errorEntity =
+                repos.contributionFileErrors.findAll().getFirst();
+        assertThat(errorEntity.getConcorContributionId()).isEqualTo(savedEntityId4);
+        assertThat(errorEntity.getContributionId()).isEqualTo(savedEntityId4);
+        assertThat(errorEntity.getErrorText()).isEqualTo(errorText);
+        assertThat(errorEntity.getContributionFileId()).isEqualTo(file2Id);
 
-        assertEquals(dateTimeCheck.getDayOfMonth(), errorEntity.getDateCreated().getDayOfMonth());
-        assertEquals(dateTimeCheck.getMonth(), errorEntity.getDateCreated().getMonth());
-        assertEquals(dateTimeCheck.getYear(), errorEntity.getDateCreated().getYear());
+        assertThat(errorEntity.getDateCreated().getDayOfMonth()).isEqualTo(dateTimeCheck.getDayOfMonth());
+        assertThat(errorEntity.getDateCreated().getMonth()).isEqualTo(dateTimeCheck.getMonth());
+        assertThat(errorEntity.getDateCreated().getYear()).isEqualTo(dateTimeCheck.getYear());
     }
 
     @Test
@@ -217,6 +219,6 @@ class ConcorContributionsRestControllerIntegrationTest extends MockMvcIntegratio
                 .andExpect(status().is4xxClientError())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON));
         // check no values in errors
-        assertEquals(0, repos.contributionFileErrors.count());
+        assertThat(repos.contributionFileErrors.count()).isZero();
     }
 }
