@@ -1,6 +1,6 @@
 package gov.uk.courtdata.integration.wqhearing;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 
 import gov.uk.MAATCourtDataApplication;
@@ -8,7 +8,9 @@ import gov.uk.courtdata.builder.TestEntityDataBuilder;
 import gov.uk.courtdata.builder.TestModelDataBuilder;
 import gov.uk.courtdata.entity.WQHearingEntity;
 import gov.uk.courtdata.integration.util.MockMvcIntegrationTest;
+
 import java.util.List;
+
 import org.assertj.core.api.junit.jupiter.SoftAssertionsExtension;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -30,15 +32,20 @@ class WQHearingControllerIntegrationTest extends MockMvcIntegrationTest {
 
     @Test
     void givenAInvalidParameter_whenFindByMaatIdAndHearingUUIDIsInvoked_thenEmptyRecordsIsReturned() throws Exception {
-        assertTrue(runSuccessScenario(List.of(), get(ENDPOINT_URL + INVALID_OFFENCE_ID + "/maatId/" + INVALID_REP_ID)));
+        assertThat(runSuccessScenario(List.of(), get(ENDPOINT_URL + INVALID_OFFENCE_ID + "/maatId/" + INVALID_REP_ID)))
+                .isTrue();
     }
 
     @Test
     void givenAValidParameter_whenFindByMaatIdAndHearingUUIDIsInvoked_thenWQLinkRegisterIsReturned() throws Exception {
         List<WQHearingEntity> wqHearingEntityList = List.of(TestEntityDataBuilder.getWQHearingEntity(8064716));
-        WQHearingEntity wqHearing =  repos.wqHearing.getReferenceById(8064716);
-        wqHearingEntityList.get(0).setCreatedDateTime(wqHearing.getCreatedDateTime());
-        wqHearingEntityList.get(0).setUpdatedDateTime(wqHearing.getUpdatedDateTime());
-        assertTrue(runSuccessScenario(wqHearingEntityList, get(ENDPOINT_URL + TestModelDataBuilder.TEST_OFFENCE_ID + "/maatId/" + TestModelDataBuilder.REP_ID)));
+        WQHearingEntity wqHearing = repos.wqHearing.getReferenceById(8064716);
+        wqHearingEntityList.getFirst().setCreatedDateTime(wqHearing.getCreatedDateTime());
+        wqHearingEntityList.getFirst().setUpdatedDateTime(wqHearing.getUpdatedDateTime());
+        assertThat(runSuccessScenario(
+                        wqHearingEntityList,
+                        get(ENDPOINT_URL + TestModelDataBuilder.TEST_OFFENCE_ID + "/maatId/"
+                                + TestModelDataBuilder.REP_ID)))
+                .isTrue();
     }
 }
